# lvglTest

./: .gitignore  CMakeLists.txt  README.md  flake.nix
include/gui/: graph.hpp  page.hpp  screen.hpp
src/: lv_demo_conf.h  lv_drv_conf.h  main.cpp
src/gui/: graph.cpp  page.cpp  screen.cpp
